--- a/Netlify.toml
+++ b/Netlify.toml
@@ -1,23 +1,23 @@
 [[headers]]
-  for = "/Build/*.data.br"
+  for = "/Build/Cosmic_Racer_Ver1.0.data.gz"
   [headers.values]
-    Content-Encoding = "br"
+    Content-Encoding = "gzip"
     Content-Type = "application/octet-stream"
-	
+
 [[headers]]
-  for = "/Build/*.wasm.br"
+  for = "/Build/Cosmic_Racer_Ver1.0.wasm.gz"
   [headers.values]
-    Content-Encoding = "br"
+    Content-Encoding = "gzip"
     Content-Type = "application/wasm"
 
-[[headers]]                                                                      
-  for = "/Build/*.js"                                                             
+[[headers]]
+  for = "/Build/Cosmic_Racer_Ver1.0.framework.js.gz"
   [headers.values]
-    Content-Encoding = "js"
+    Content-Encoding = "gzip"
     Content-Type = "application/javascript"
-	
-[[headers]]                                                                      
-  for = "/Build/*.js.br"                                                             
+
+[[headers]]
+  for = "/Build/Cosmic_Racer_Ver1.0.loader.js"
   [headers.values]
-    Content-Encoding = "br"
+    Content-Encoding = "gzip"
     Content-Type = "application/javascript"
